SERVER-16031 Call cleanShutdown rather than deleting KVEngines

Resolves some race conditions on shutdown.