src/mongo/db/storage/devnull/devnull_kv_engine.h
@@ -93,5 +93,6 @@ namespace mongo {
             return Status::OK();
         }
 
+        virtual void cleanShutdown(OperationContext* txn) {};
     };
 }
