src/mongo/db/storage/kv/kv_storage_engine.h
@@ -91,7 +91,9 @@ namespace mongo {
     private:
         class RemoveDBChange;
 
+        // This must be the first member so it is destroyed last.
         boost::scoped_ptr<KVEngine> _engine;
+
         bool _initialized;
         const bool _supportsDocLocking;
 
