src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp
@@ -141,17 +141,27 @@ namespace mongo {
 
 
     WiredTigerKVEngine::~WiredTigerKVEngine() {
-        log() << "WiredTigerKVEngine shutting down";
-        syncSizeInfo();
+        if (_conn) {
+            cleanShutdown(NULL); // our impl doesn't use the OperationContext
+        }
+
         _sizeStorer.reset( NULL );
 
         _sessionCache.reset( NULL );
 
-        if ( _conn ) {
+    }
+
+    void WiredTigerKVEngine::cleanShutdown(OperationContext* txn) {
+        log() << "WiredTigerKVEngine shutting down";
+        syncSizeInfo();
+        if (_conn) {
+            // this must be the last thing we do before _conn->close();
+            _sessionCache->shuttingDown();
+
+            // TODO consider passing "leak_memory=true" to close() when not running a leak checker.
             invariantWTOK( _conn->close(_conn, NULL) );
             _conn = NULL;
         }
-
     }
 
     Status WiredTigerKVEngine::okToRename( OperationContext* opCtx,
